2002-01-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht (href): Clarify that while a LDA such as
	procmail is required for all non-qmail users, only Sendmail
	requires a .procmailrc to be maintained.

2002-01-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Add nmh configuration information.
	Programs should now add the `-n' option to prevent a newline
	from being added.

2001-12-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* bugs.ht: Add more detailed instructions on how to report bugs
	and make patch submissions.

2001-12-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: New entries: 
	- "Why don't my user+detail addresses work with Sendmail
	virtualdomains?"
	- Why don't my user+detail addresses work with Sendmail
	/etc/aliases?

2001-12-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Rename `tmda-make-address' to
	``tmda-address''.
	
	* download.ht (Links): Mention that the Debian and FreeBSD
	packages might be lagging behind the latest release.

2001-12-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Replace `tmda-dated-address' references with
	`tmda-make-address -d'.

2001-12-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht (Links): Recommend Python >= 2.2.

2001-12-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-pre.ht (href): Modify Sendmail configuration
	instructions: Only FEATURE(`local_procmail') is necessary, no need
	to add X-Envelope-* headers.

	* config-server.ht: Modify Sendmail/.procmailrc instructions to
	construct both RECIPIENT and SENDER from a combination of
	EXTENSION and available environment variables.

2001-12-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-pre.ht (href): Clarify the required format of SENDER,
	RECIPIENT, and EXTENSION.
