@@ -25,6 +25,11 @@ Dave Sill on <em>alt.comp.mail.qmail</em>
 Lou Hevly on the <em>tmda-users mailing list</em>
 <br><br>
 
+"One week, 1500 emails, no spam!  Just a note of thanks.  The subject
+says it all.  We'll be recommending TMDA to our clients."<br>
+Robin Lynn Frank on the <em>tmda-users mailing list</em>
+<br><br>
+
 "Blocks spam better than any RBL ever did."<br>
 Adam McKenna on the <em>qmail mailing list</em>
 <br><br>
