@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Dec  7 15:55:33 2001 -->
+<!-- Sun Jan  6 22:43:30 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -148,6 +148,11 @@ Dave Sill on <em>alt.comp.mail.qmail</em>
 "Since using TMDA (4 weeks) I've only gotten 2 spams.  I used to get
 50-75 a day."<br>
 Lou Hevly on the <em>tmda-users mailing list</em>
+<br><br>
+
+"One week, 1500 emails, no spam!  Just a note of thanks.  The subject
+says it all.  We'll be recommending TMDA to our clients."<br>
+Robin Lynn Frank on the <em>tmda-users mailing list</em>
 <br><br>
 
 "Blocks spam better than any RBL ever did."<br>
