@@ -1,5 +1,7 @@
 2002-01-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* results.ht (Links): Add testimonial from Robin Lynn Frank.
+	
 	* requirements.ht (href): Clarify that while a LDA such as
 	procmail is required for all non-qmail users, only Sendmail
 	requires a .procmailrc to be maintained.
